# phishnano

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  publish.yml
phishnano-cli/: Cargo.toml
phishnano-cli/src/: main.rs
resources/: model_data.bincode  model_data.json  test_features.json  test_struct_features.json
src/: extractor.rs  indicators.rs  lib.rs  model.rs  predictor.rs  scoring.rs
