[package]
name = "phishnano"
version = "0.1.1"
edition = "2021"
description = "Lightweight phishing URL detection library with embedded ML model and CLI"
license = "MIT"
repository = "https://github.com/ignotuslabs/phishnano"
homepage = "https://github.com/ignotuslabs/phishnano"
keywords = ["phishing", "security", "url", "detection", "ml"]
categories = ["security"]
readme = "README.md"
include = [
    "src/lib.rs",
    "src/extractor.rs",
    "src/model.rs",
    "src/predictor.rs",
    "src/bin/phishnano-cli.rs",
    "resources/model_data.bincode",
    "resources/model_data.json",
    "resources/test_features.json",
    "README.md",
    "LICENSE",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
murmurhash3 = "0.0.5"
regex = "1.0"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "phishnano-cli"
path = "src/bin/phishnano-cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
