[package]
name = "phishnano"
version = "0.1.9"
edition = "2021"
description = "Lightweight offline phishing URL detection library with embedded Random Forest model, microsecond local inference, and zero network requests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ignotuslabs/phishnano"
homepage = "https://github.com/ignotuslabs/phishnano"
documentation = "https://docs.rs/phishnano"
keywords = ["phishing", "security", "url", "detection", "random-forest"]
categories = ["security", "algorithms"]
readme = "README.md"
rust-version = "1.70"
include = [
    "src/lib.rs",
    "src/extractor.rs",
    "src/model.rs",
    "src/predictor.rs",
    "src/indicators.rs",
    "src/scoring.rs",
    "src/bin/phishnano-cli.rs",
    "resources/model_data.bincode",
    "resources/model_data.json",
    "resources/test_features.json",
    "resources/test_struct_features.json",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
regex = "1.0"
anyhow = "1.0"
percent-encoding = "2.0"
idna = "0.5"
once_cell = "1"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "phishnano-cli"
path = "src/bin/phishnano-cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
