[package]
name = "phishnano-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for phishing URL detection"
license = "MIT"
repository = "https://github.com/ignotuslabs/phishnano"
homepage = "https://github.com/ignotuslabs/phishnano"

[dependencies]
phishnano = { path = "..", version = "0.1" }
anyhow = "1.0"
